# lattice

./: CMakeLists.txt  README.md  conanfile.py
src/: CMakeLists.txt
src/errors/: ALatticeError.cpp  ALatticeError.hpp  CMakeLists.txt
src/messages/: CMakeLists.txt  IMessage.cpp  IMessage.hpp
src/messages/http/: AbstractHttpMessage.cpp  AbstractHttpMessage.hpp  CMakeLists.txt  Header.cpp  Header.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
src/messages/http/errors/: AHttpError.cpp  AHttpError.hpp  CMakeLists.txt  HttpVersionNotSupported.cpp  HttpVersionNotSupported.hpp  MethodNotAllowed.cpp  MethodNotAllowed.hpp  NoSuchHeaderException.cpp  NoSuchHeaderException.hpp  NoSuchQueryException.cpp  NoSuchQueryException.hpp  NotFound.cpp  NotFound.hpp
src/network/: AClient.cpp  AClient.hpp  CMakeLists.txt  Server.cpp  Server.hpp
src/network/http/: CMakeLists.txt  HttpClient.cpp  HttpClient.hpp  HttpServer.cpp  HttpServer.hpp
src/router/: CMakeLists.txt  IRoute.cpp  IRoute.hpp  Router.cpp  Router.hpp
src/router/http/: CMakeLists.txt  HttpEndpoint.cpp  HttpEndpoint.hpp  HttpMiddleware.cpp  HttpMiddleware.hpp  HttpRoute.cpp  HttpRoute.hpp  HttpRouteBuilder.cpp  HttpRouteBuilder.hpp
src/utils/: CMakeLists.txt  StringUtils.cpp  StringUtils.hpp
tests/: CMakeLists.txt
tests/network/: CMakeLists.txt  ServerTest.cpp
